@@ -4,6 +4,12 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04a: *********************************
 
+BUG: (09/27/05, DN) NullPointerExceptions in BATCH mode.
+FIX: In WindowFrame.createEditWindow insert "if (Main.BATCHMODE) return null;"
+
+BUG: (09/27/05, DN) NullPointerException in TextUtils.formatDouble.
+FIX: In TextUtils.formatDouble change numberFormatPostFix to numberFormatSpecific.
+
 BUG: (09/27/05, DN) Icons should be always be expanded cells/instances (Bug #570)
 FIX: In Cell.isWantExpanded() and NodeInst.setExpanded() ensure that icon instances are always expanded.
 
